fix: table height jumping

--- a/src/components/TableMyIPR/TableMyIPR.module.css
+++ b/src/components/TableMyIPR/TableMyIPR.module.css
@@ -40,3 +40,7 @@
   display: flex;
   justify-content: center;
 }
+
+.table {
+  min-height: calc(76px + 120px * 5);
+}
